--- a/BadgeGeneratorLibrary/src/main/res/values/styles.xml
+++ b/BadgeGeneratorLibrary/src/main/res/values/styles.xml
@@ -5,16 +5,16 @@
 
         <attr name="badgeLabel" format="string"/>
         <attr name="badgeMessage" format="string"/>
-<!--        <attr name="badgeColor" format="enum">-->
-<!--            <enum name="blue" value="blue"/>-->
-<!--            <enum name="brightGreen" value="brightgreen"/>-->
-<!--            <enum name="green" value="green"/>-->
-<!--            <enum name="yellowGreen" value="yellowgreen"/>-->
-<!--            <enum name="yellow" value="yellow"/>-->
-<!--            <enum name="orange" value="orange"/>-->
-<!--            <enum name="red" value="red"/>-->
-<!--            <enum name="lightGrey" value="lightgrey"/>-->
-<!--        </attr>-->
+        <attr name="badgeColor" format="enum">
+            <enum name="badgeColorBlue" value="blue"/>
+            <enum name="badgeColorBrightGreen" value="brightgreen"/>
+            <enum name="badgeColorGreen" value="green"/>
+            <enum name="badgeColorYellowGreen" value="yellowgreen"/>
+            <enum name="badgeColorYellow" value="yellow"/>
+            <enum name="badgeColorOrange" value="orange"/>
+            <enum name="badgeColorRed" value="red"/>
+            <enum name="badgeColorLightGrey" value="lightgrey"/>
+        </attr>
 
     </declare-styleable>
     
