--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,12 @@
         android:layout_height="wrap_content"
         android:hint="Enter the color here."/>
 
+    <EditText
+        android:id="@+id/styleED"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter the style here."/>
+
     <Button
         android:id="@+id/done"
         android:layout_width="match_parent"
