--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_height="0dp"
         app:badgeMessage="This is a sample message"
         app:badgeLabel="This is a sample label"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:layout_margin="20dp"/>
 
     <EditText
         android:id="@+id/labelED"
